--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,8 @@
               ]
             },
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/custom-theme.scss"
             ],
             "scripts": [],
             "serviceWorker": true,
@@ -113,7 +114,8 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/custom-theme.scss"
             ],
             "scripts": []
           }
