--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@angular/platform-browser-dynamic": "^16.1.8",
     "@angular/router": "^16.1.8",
     "@angular/service-worker": "^16.1.8",
+    "@angular/material": "^16.1.8",
     "pixi.js": "^8.14.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "typescript": "~5.0.0",
-    "zone.js": "~0.13.1"
+    "zone.js": "~0.13.1",
+    "@ngxs/store": "^3.8.1"
   },
   "engines": {
     "npm": "~8.19.3",
