--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "ng": "ng",
     "dev": "ng serve --live-reload false",
     "start": "node server.js",
-    "build": "ng build --configuration production --output-hashing=all"
+    "build": "ng build --configuration production --output-hashing=all",
+    "postinstall": "patch-package"
   },
   "private": true,
   "dependencies": {
+    "@abacritt/angularx-social-login": "2.1.0",
     "@angular-devkit/build-angular": "^16.1.8",
     "@angular/cli": "^16.1.8",
     "@angular/common": "^16.1.8",
@@ -16,23 +18,26 @@
     "@angular/compiler-cli": "^16.1.8",
     "@angular/core": "^16.1.8",
     "@angular/forms": "^16.1.8",
+    "@angular/material": "^16.1.8",
     "@angular/platform-browser": "^16.1.8",
     "@angular/platform-browser-dynamic": "^16.1.8",
     "@angular/router": "^16.1.8",
     "@angular/service-worker": "^16.1.8",
-    "@angular/material": "^16.1.8",
+    "@ngxs/store": "^3.8.1",
+    "crypto-js": "^4.1.1",
     "pixi.js": "^8.14.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "typescript": "~5.0.0",
     "zone.js": "~0.13.1",
-    "@ngxs/store": "^3.8.1"
+    "patch-package": "^8.0.0"
   },
   "engines": {
     "npm": "~8.19.3",
     "node": "~16.19.0"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^16.18.126",
     "@webgpu/types": "^0.1.64"
   }
